examples/jp_chkt_15.err
Line 3:11 error: Operator '+' with incompatible types.
Line 4:4 error: Assignment with incompatible types.
Line 5:18 error: Operator '+' with incompatible types.
Line 5:15 error: Parameter #2 with incompatible types in call to 'f'.
